infra/k8sSamplePod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: static-persistence-volume-graph
      persistentVolumeClaim:
       claimName: static-persistence-volume-claim
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: static-persistence-volume-graph

apiVersion: v1
kind: Service
metadata:
  name: task-pv-pod
  labels:
    run: task-pv-pod
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: task-pv-pod
