infra/k8sIngress-ARCHIVE.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pvctest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aksgovind.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: my-nginx
          servicePort: 80
