infra/pmoOpenProject-ARCHIVE.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: project-management-open
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: open-project
    spec:
      containers:
      - name: open-project
        image: openproject/community:7
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/var/lib/postgresql"
          name: pv-pmo-postgress
        - mountPath: /var/db/openproject
          name: pv-pmo-openproject
      volumes:
      - name: pv-pmo-postgress
        persistentVolumeClaim:
          claimName: pvc-pmo-postgress
      - name: pv-pmo-openproject
        persistentVolumeClaim:
          claimName: pvc-pmo-openproject
---
apiVersion: v1
kind: Service
metadata:
  name: pmo-openproject
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: open-project
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pmo-openproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aksgovind.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /pmopen
        backend:
          serviceName: pmo-openproject
          servicePort: 80
